# taurus-node

./: .gitignore  .gitmodules  CMakeLists.txt  IMPORTANT.md  LICENSE  README.md  eos.doxygen.in  rodeos-config.ini  toolchain.cmake
libraries/: CMakeLists.txt  CMakeLists_yubi.txt  CMakeLists_yubi_lib.txt
libraries/amqp/: reliable_amqp_publisher.cpp  retrying_amqp_connection.cpp  transactional_amqp_publisher.cpp
libraries/amqp/include/eosio/amqp/: amqp_handler.hpp  reliable_amqp_publisher.hpp  retrying_amqp_connection.hpp  transactional_amqp_publisher.hpp
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  chain_config.cpp  controller.cpp  db_util.cpp  eosio_contract.cpp  fork_database.cpp  platform_timer_accuracy.cpp  platform_timer_posix.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  resource_limits.cpp  snapshot.cpp  transaction.cpp  transaction_context.cpp  wasm_eosio_validation.cpp  wasm_interface.cpp  wast_to_wasm.cpp  whitelisted_intrinsics.cpp
libraries/chain/backing_store/: kv_context.cpp
libraries/chain/include/eosio/chain/: abi_serializer.hpp  apply_context.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  backing_store.hpp  bit.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  chain_config.hpp  chain_config_helper.hpp  chain_id_type.hpp  chain_snapshot.hpp  config.hpp  contract_types.hpp  controller.hpp  database_header_object.hpp  database_utils.hpp  exceptions.hpp  fixed_bytes.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_state.hpp  incremental_merkle.hpp  log_index.hpp  name.hpp  protocol_feature_manager.hpp  resource_limits.hpp  resource_limits_private.hpp  snapshot.hpp  symbol.hpp  thread_utils.hpp  to_string.hpp  trace.hpp  transaction.hpp  types.hpp  (+7 more)
libraries/chain/webassembly/: action.cpp  cf_system.cpp  crypto.cpp  database.cpp  kv_database.cpp  permission.cpp  privileged.cpp  system.cpp  transaction.cpp
libraries/chain/webassembly/runtimes/: eos-vm.cpp  native-module.cpp
libraries/rodeos/: CMakeLists.txt  embedded_rodeos.cpp  rodeos.cpp  wasm_ql.cpp
libraries/rodeos/include/eosio/: coverage.hpp
libraries/se-helpers/: se-helpers.cpp
libraries/state_history/: create_deltas.cpp  log.cpp  transaction_trace_cache.cpp
libraries/testing/: contracts.hpp.in  tester.cpp
libraries/tpm-helpers/: CMakeLists.txt  tpm-helpers.cpp
libraries/version/: CMakeLists.txt
libraries/wasm-jit/Include/Inline/: Errors.h  Floats.h
libraries/wasm-jit/Include/Runtime/: Linker.h
plugins/: CMakeLists.txt
plugins/amqp_trx_api_plugin/: CMakeLists.txt  amqp_trx_api_plugin.cpp
plugins/amqp_trx_plugin/: CMakeLists.txt  amqp_trace_plugin_impl.cpp  amqp_trx_plugin.cpp
plugins/amqp_trx_plugin/test/: CMakeLists.txt  test_ordered.cpp  test_ordered_full.cpp
plugins/chain_api_plugin/: chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  account_query_db.cpp  chain_plugin.cpp  native_module_runtime.cpp  read_only.cpp  read_write.cpp  table_query.cpp
plugins/chain_plugin/test/: test_chain_plugin.cpp
plugins/event_streamer_plugin/: CMakeLists.txt  event_streamer_plugin.cpp
plugins/http_plugin/: http_plugin.cpp
plugins/login_plugin/: login_plugin.cpp
plugins/net_api_plugin/: net_api_plugin.cpp
plugins/net_plugin/: CMakeLists.txt  block_status_monitor.cpp  buffer_factory.cpp  connection.cpp  dispatch_manager.cpp  net_plugin.cpp  net_plugin_impl.cpp
plugins/net_plugin/test/: CMakeLists.txt  test_sync_manager.cpp
plugins/producer_api_plugin/: producer_api_plugin.cpp
plugins/producer_ha_plugin/: CMakeLists.txt  nodeos_state_log_store.cpp  producer_ha_plugin.cpp
plugins/producer_ha_plugin/test/: CMakeLists.txt  test_nodeos_state_db.cpp  test_nodeos_state_manager.cpp
plugins/producer_plugin/: CMakeLists.txt  block_producer.cpp  pending_snapshot.cpp  pending_snapshot_tracker.cpp  producer.cpp  producer_plugin.cpp  transaction_processor.cpp
plugins/producer_plugin/test/: CMakeLists.txt  test_producer.cpp  test_snapshot_information.cpp  test_trx_full.cpp
plugins/resource_monitor_plugin/: resource_monitor_plugin.cpp
plugins/resource_monitor_plugin/test/: test_resmon_plugin.cpp
plugins/rodeos_plugin/: CMakeLists.txt  cloner_plugin.cpp  rocksdb_plugin.cpp  rocksdb_ramdisk_options.ini  rodeos_plugin.cpp  streamer_plugin.cpp  wasm_ql_http.cpp  wasm_ql_plugin.cpp
plugins/rodeos_plugin/tests/: CMakeLists.txt
plugins/signature_provider_plugin/: signature_provider_plugin.cpp
plugins/state_history_plugin/: state_history_plugin.cpp
plugins/test_control_plugin/: test_control_plugin.cpp
plugins/trace_api_plugin/: abi_data_handler.cpp  configuration_utils.cpp
plugins/trace_api_plugin/test/: test_compressed_file.cpp  test_configuration_utils.cpp
plugins/txn_test_gen_plugin/: README.md  txn_test_gen_plugin.cpp
plugins/wallet_plugin/: CMakeLists.txt  wallet.cpp  wallet_manager.cpp  wallet_plugin.cpp  yubihsm_wallet.cpp
programs/: CMakeLists.txt
programs/abi-json-to-bin/: CMakeLists.txt  main.cpp
programs/cleos/: CLI11.hpp  CMakeLists.txt  cleoslib.cpp  config.json.in  help_text.cpp.in  help_text.hpp  httpc.cpp  main_entry.cpp
programs/cleos/include/eosio/: cleos_client.hpp  cleoslib.hpp
programs/eosio-blocklog/: main.cpp
programs/eosio-launcher/: main.cpp
programs/eosio-tester/: CMakeLists.txt  main.cpp  native-tester.cpp  test_chain.hpp
programs/keosd/: main.cpp
programs/network-relay/: CMakeLists.txt  relay.cpp
programs/nodeos/: CMakeLists.txt  logging.json  main.cpp
programs/rodeos/: CMakeLists.txt  cloner_plugin.cpp  cloner_plugin.hpp  main.cpp  rocksdb_plugin.cpp  ship_client.hpp  streamer_plugin.cpp  wasm_ql_http.cpp  wasm_ql_plugin.cpp
programs/taurus-blocklog-cp/: README.md  taurus-blocklog-cp.cpp
unittests/test-contracts/verify_ecdsa/: CMakeLists.txt  verify_ecdsa.abi  verify_ecdsa.cpp  verify_ecdsa.wasm
unittests/test-contracts/verify_rsa/: CMakeLists.txt  verify_rsa.abi  verify_rsa.cpp  verify_rsa.wasm
(+334 files in other folders)
